--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="bottom_sheet_peek_height">300dp</dimen>
+
+    <dimen name="cc_mrg_small">3dp</dimen>
+    <dimen name="cc_mrg_medium">15dp</dimen>
+    <dimen name="cc_mrg_large">40dp</dimen>
+    <dimen name="cc_mrg_vertical">20dp</dimen>
+
+    <dimen name="cc_panel_action_translation_Y">-110dp</dimen>
+    <dimen name="cc_history_header_elevated_z">5dp</dimen>
+    <dimen name="cc_history_header_height">48dp</dimen>
 </resources>
