--- a/app/src/main/res/drawable/bg.xml
+++ b/app/src/main/res/drawable/bg.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="@color/cc_bg_primary"
-        android:endColor="@color/cc_bg_top"
+    <gradient android:startColor="@color/bg_primary"
+        android:endColor="@color/bg_top"
         android:angle="45"/>
 </shape>
