--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,9 +10,9 @@
     <color name="colorGrey">#e0e0e0</color>
     <color name="colorGreyStrong">#757575</color>
 
-    <color name="cc_bg_primary">#514fce</color>
-    <color name="cc_bg_top">#d2a6a7</color>
+    <color name="bg_primary">#514fce</color>
+    <color name="bg_top">#d2a6a7</color>
 
-    <color name="cc_shadow">#eeeeee</color>
+    <color name="shadow">#eeeeee</color>
 
 </resources>
