--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,9 +10,6 @@
     <color name="colorGrey">#e0e0e0</color>
     <color name="colorGreyStrong">#757575</color>
 
-    <color name="bg_primary">#514fce</color>
-    <color name="bg_top">#d2a6a7</color>
-
-    <color name="shadow">#eeeeee</color>
-
+    <color name="bg_primary">#445cd5</color>
+    <color name="bg_top">#d6acad</color>
 </resources>
